--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -11,34 +11,59 @@ body {
     margin: 1rem 0;
     border-radius: 12px;
     background-color: #4b4b4b;
+
+    h2 {
+      color: #3a3a3a;
+      font-size: 1rem;
+      flex: 1;
+      margin: 0 1rem;
+      color: white;
+    }
+    .expense-item__description {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      align-items: flex-end;
+      flex-flow: column-reverse;
+      justify-content: flex-start;
+      flex: 1;
+    }
+    
+    .expense-item__price {
+      font-size: 1rem;
+      font-weight: bold;
+      color: white;
+      background-color: #40005d;
+      border: 1px solid white;
+      padding: 0.5rem;
+      border-radius: 12px;
+    }
   }
-  
-  .expense-item__description {
+  .expense-date {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
-    align-items: flex-end;
-    flex-flow: column-reverse;
-    justify-content: flex-start;
-    flex: 1;
-  }
-  
-  .expense-item h2 {
-    color: #3a3a3a;
-    font-size: 1rem;
-    flex: 1;
-    margin: 0 1rem;
+    width: 5.5rem;
+    height: 5.5rem;
+    border: 1px solid #ececec;
+    background-color: #2a2a2a;
     color: white;
-  }
-  
-  .expense-item__price {
-    font-size: 1rem;
-    font-weight: bold;
-    color: white;
-    background-color: #40005d;
-    border: 1px solid white;
-    padding: 0.5rem;
     border-radius: 12px;
+    align-items: center;
+    justify-content: center;
+
+    .month {
+      font-size: 0.75rem;
+      font-weight: bold;
+    }
+
+    .year {
+      font-size: 0.75rem;
+    }
+
+    .day {
+      font-size: 1.5rem;
+      font-weight: bold;
+    }
   }
   
   @media (min-width: 580px) {
@@ -47,10 +72,10 @@ body {
       align-items: center;
       justify-content: flex-start;
       flex: 1;
-    }
-  
-    .expense-item__description h2 {
-      font-size: 1.25rem;
+
+      h2 {
+        font-size: 1.25rem;
+      }
     }
   
     .expense-item__price {
