--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -65,6 +65,13 @@ body {
       font-weight: bold;
     }
   }
+  .expenses {
+    padding: 1rem;
+    background-color: rgb(31, 31, 31);
+    margin: 2rem auto;
+    width: 50rem;
+    max-width: 95%;
+  }
   
   @media (min-width: 580px) {
     .expense-item__description {
