--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -1,5 +1,5 @@
 body {
-    background-color: #f5f5f5;
+    background-color: #aeaeae;
 }
 
 .expense-item {
@@ -71,6 +71,7 @@ body {
     margin: 2rem auto;
     width: 50rem;
     max-width: 95%;
+    border-radius: 15px;
   }
   
   @media (min-width: 580px) {
