--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -2,6 +2,7 @@ body {
     background-color: #aeaeae;
 }
 
+// Expenseitems.js
 .expense-item {
     display: flex;
     justify-content: space-between;
@@ -65,6 +66,8 @@ body {
       font-weight: bold;
     }
   }
+
+  // ExpenseItems.js
   .expenses {
     padding: 1rem;
     background-color: rgb(31, 31, 31);
@@ -72,6 +75,73 @@ body {
     width: 50rem;
     max-width: 95%;
     border-radius: 15px;
+  }
+
+  // NewExpenses.js
+  .new-expense{
+    background-color: #a892ee;
+    padding: 1rem;
+    margin: 2rem auto;
+    width: 50rem;
+    max-width: 95%;
+    border-radius: 12px;
+    text-align: center;
+    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
+
+    button{
+        font: inherit;
+        cursor: pointer;
+        padding: 1rem 2rem;
+        border: 1px solid #40005d;
+        background-color: #40005d;
+        color: white;
+        border-radius: 12px;
+        margin-right: 1rem;
+
+        &:hover,
+        &:active{
+          background-color: #510674;
+          border-color: #510674;
+        }
+        .alternative {
+          color: #220131;
+          border-color: transparent;
+          background-color: transparent;
+
+          &:hover,
+          &:active {
+            background-color: #ddb3f8;
+          }
+        }
+    }
+  }
+  .expense_form{
+    .new-expense__controls {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1rem;
+      margin-bottom: 1rem;
+      text-align: left;
+  
+      .new-expense__control{
+        label {
+          font-weight: bold;
+          margin-bottom: 0.5rem;
+          display: block;
+        }
+        input {
+          font: inherit;
+          padding: 0.5rem;
+          border-radius: 6px;
+          border: 1px solid #ccc;
+          width: 20rem;
+          max-width: 100%;
+        }
+      }
+    }
+    .actions {
+      text-align: right;
+    }
   }
   
   @media (min-width: 580px) {
