--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -143,6 +143,32 @@ body {
       text-align: right;
     }
   }
+
+// ExpensesFilter.js
+.expenses-filter {
+  color: white;
+  padding: 0 1rem;
+
+  .control {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+    margin: 1rem 0;
+  }
+  
+  label {
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+  }
+  
+  select {
+    font: inherit;
+    padding: 0.5rem;
+    font-weight: bold;
+    border-radius: 6px;
+  }
+}
   
   @media (min-width: 580px) {
     .expense-item__description {
